--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/daishihmr/vox.js",
   "main": "build/vox.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "grunt": "grunt"
   },
   "repository": {
     "type": "git",
@@ -19,7 +19,9 @@
   ],
   "author": "daishihmr",
   "license": "MIT",
-  "dependencies": {},
+  "dependencies": {
+    "three": "^0.117.1"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
