--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/daishihmr/vox.js",
   "main": "build/vox.js",
   "scripts": {
-    "grunt": "grunt"
+    "publish": "gitpkg publish"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,10 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "gitpkg": "https://github.com/0xProject/gitpkg.git"
+  },
+  "gitpkg": {
+    "registry": "git@github.com:dave4506/art.bydavidsun-gikpkg-registry.git"
   }
 }
