--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/daishihmr/vox.js",
   "main": "build/vox.js",
   "scripts": {
-    "publish": "gitpkg publish"
+    "publish:private": "gitpkg publish"
   },
   "repository": {
     "type": "git",
@@ -20,14 +20,16 @@
   "author": "daishihmr",
   "license": "MIT",
   "dependencies": {
+    "canvas": "^2.6.1",
+    "canvas-prebuilt": "^2.0.0-alpha.14",
     "three": "^0.117.1"
   },
   "devDependencies": {
+    "gitpkg": "https://github.com/0xProject/gitpkg.git",
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-uglify": "^0.9.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "gitpkg": "https://github.com/0xProject/gitpkg.git"
+    "grunt-contrib-watch": "^0.6.1"
   },
   "gitpkg": {
     "registry": "git@github.com:dave4506/art.bydavidsun-gikpkg-registry.git"
